read mysql settings from appsettings

--- a/DishyApi/appsettings.json
+++ b/DishyApi/appsettings.json
@@ -10,5 +10,8 @@
     "Issuer": "https://rasalhague.de/",
     "Audience": "https://rasalhague.de/",
     "Key": "33B18F3989FE122D68D6446A4397F"
-  }
+  },
+  "MySql": {
+    "ConnectionString": "Server=localhost;Database=DishDb;Uid=root;Pwd=PENIS;"
+  } 
 }
