--- a/DishyApi/appsettings.json
+++ b/DishyApi/appsettings.json
@@ -13,5 +13,8 @@
   },
   "MySql": {
     "ConnectionString": "Server=localhost;Database=DishDb;Uid=root;Pwd=PENIS;"
-  } 
+  },
+  "ApiKey": {
+    "Key":  "Test"
+  }
 }
